# af-binder

./: .gitignore  .gitreview  CMakeLists.txt  README.md  afb-daemon.pc.in  afs-supervisor.service.in  book.json  doxyfile.binder  doxyfile.binding  gendocs.sh  libafbwsc.pc.in  memo-supervisor.txt  memo-v3.txt  mkdocs.yml  stress-clients.sh  stress-server.sh  stress.sh
bindings/: CMakeLists.txt
bindings/audio/: audio-alsa.c  audio-alsa.h  audio-api.c  audio-api.h  audio-pulse.c  audio-pulse.h
bindings/intrinsics/: CMakeLists.txt  afb-dbus-binding.c
bindings/media/: media-api.c  media-api.h  media-rygel.c  media-rygel.h
bindings/radio/: radio-api.c  radio-api.h  radio-rtlsdr.c  radio-rtlsdr.h
bindings/samples/: AuthLogin.c  CMakeLists.txt  DemoContext.c  DemoPost.c  HelloWorld.c  ave.c  hello2.c  hello3.c  hi3.c  tic-tac-toe.c
bindings/tutorial/: CMakeLists.txt  tuto-1.c  tuto-2.c  tuto-3.cpp  tuto-app1.c
conf.d/packaging/: agl-app-framework-binder.dsc  agl-app-framework-binder.spec  debian.agl-app-framework-binder-bin.install  debian.agl-app-framework-binder-dev.install  debian.control  debian.rules
conf.d/packaging/deb/: agl-app-framework-binder.dsc  debian.agl-app-framework-binder-bin.install  debian.agl-app-framework-binder-dev.install  debian.changelog  debian.control  debian.rules
conf.d/packaging/rpm/: agl-app-framework-binder.spec
coverage/: .gitignore  Makefile  README.md
coverage/apis/auto/: saha  salam  shalom  x-hello  x-salut
coverage/ldpath/weak/: bugs
coverage/scripts/: 00-trace.sh  01-http.sh  02-hello.sh  03-auto-ws.sh  04-monitor.sh  05-hello-v2.sh  06-auto-so.sh  07-inet.sh  run-parts.sh  run-test.sh
coverage/www/: index.html
doc/: FAQ.md  afb-application-writing.md  afb-bindings-writing.md  afb-daemon-vocabulary.md  afb-overview.md  afb-tests-overview.md
docs/: FAQ.md  README.md  REVISIONS.md  SUMMARY.md  afb-application-writing.md  afb-binding-references.md  afb-binding-writing.md  afb-daemon-debugging.md  afb-daemon-options.md  afb-daemon-vocabulary.md  afb-desktop-package.md  afb-events-guide.md  afb-migration-to-binding-v3.md  afb-migration-v1-to-v2.md  afb-overview.md  annexes.md  index.md  migration-to-binding-v3.sed  protocol-x-afb-ws-json1.md
docs/legacy/: afb-binding-v2-references.md
docs/reference-v3/: func-api.md  func-event.md  func-req.md  func-service.md  types-and-globals.md
include/: CMakeLists.txt
include/afb/: afb-api-x3-itf.h  afb-api-x3.h  afb-arg.h  afb-auth.h  afb-binding  afb-binding-postdefs.h  afb-binding-predefs.h  afb-binding-v1.h  afb-binding-v2.h  afb-binding-v3.h  afb-binding-vdyn.h  afb-binding.h  afb-binding.hpp  afb-daemon-common.h  afb-daemon-itf-x1.h  afb-daemon-itf.h  afb-daemon-v1.h  afb-daemon-v2.h  afb-dynapi-itf.h  afb-dynapi-legacy.h  afb-dynapi.h  afb-event-itf.h  afb-event-x1-itf.h  afb-event-x1.h  afb-event-x2-itf.h  afb-event-x2.h  afb-event.h  afb-eventid-itf.h  afb-eventid.h  afb-plugin.h  afb-req-common.h  afb-req-itf.h  afb-req-v1.h  afb-req-v2.h  afb-req-x1-itf.h  afb-req-x1.h  afb-req-x2-itf.h  afb-req-x2.h  afb-req.h  afb-request-itf.h  (+13 more)
jsapi/: js-hello.js
nbproject/: configurations.xml  project.xml
old-docs/: afb-bindings-overview.md  afb-bindings-writing.md  afb-events-guide.md  afb-overview.md
packaging/: app-framework-binder.dsc  app-framework-binder.spec  debian.app-framework-binder-bin.install  debian.app-framework-binder-dev.install  debian.changelog  debian.control  debian.rules
src/: CMakeLists.txt  afb-api-dbus.c  afb-api-dbus.h  afb-api-dyn.c  afb-api-dyn.h  afb-api-js.c  afb-api-js.h  afb-api-so-v1.c  afb-api-so-v1.h  afb-api-so-v2.c  afb-api-so-v2.h  afb-api-so-v3.c  afb-api-so-v3.h  afb-api-so-vdyn.c  afb-api-so-vdyn.h  afb-api-so.c  afb-api-so.h  afb-api-v3.c  afb-api-v3.h  afb-api-ws.c  afb-api-ws.h  afb-api.c  afb-api.h  afb-apis.c  afb-apis.h  afb-apiset.c  afb-apiset.h  afb-auth.c  afb-auth.h  afb-autoset.c  afb-autoset.h  afb-calls.c  afb-calls.h  afb-client-demo.c  afb-common.c  afb-common.h  afb-config.c  afb-config.h  afb-context.c  afb-context.h  (+108 more)
src/devtools/: CMakeLists.txt  exprefs.c  genskel.c  json2c.c  monitor-api.json
src/genskel/: CMakeLists.txt  exprefs.c  genskel.c  json2c.c  monitor-api.json
src/tests/: CMakeLists.txt  test-thread.c  test-thread.sh
src/tests/apiset/: CMakeLists.txt  test-apiset.c
src/tests/apiv3/: CMakeLists.txt  test-apiv3.c
src/tests/session/: CMakeLists.txt  test-session.c
src/tests/test-perm/: CMakeLists.txt  test-perm.c
src/tests/wrap-json/: CMakeLists.txt  test-wrap-json.c
test/: AFB.html  AFB.js  hello-world.html  index.html  tic-tac-toe.html
test/monitoring/: AFB.js  monitor-base.css  monitor-demo.css  monitor-pastel.css  monitor.css  monitor.html  monitor.js
